--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,22 +4,6 @@
     "prefer-arrow-callback": ["error"],
     "prefer-template": ["error"],
     "semi": ["error"],
-    "quotes": ["error", "double"],
-    "n/no-process-env": ["error"],
-    "check-file/filename-naming-convention": [
-      "error",
-      {
-        "**/*.{ts,tsx}": "KEBAB_CASE"
-      },
-      {
-        "ignoreMiddleExtensions": true
-      }
-    ],
-    "check-file/folder-naming-convention": [
-      "error",
-      {
-        "src/**/!^[.*": "KEBAB_CASE"
-      }
-    ]
+    "quotes": ["error", "double"]
   }
 }
