--- a/example.env
+++ b/example.env
@@ -1,15 +1,8 @@
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
-CLERK_SECRET_KEY=
-
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
-CLERK_SECRET_KEY=
-SIGNING_SECRET=
+AUTH_SECRET=
 
 # dev branch - neondb
-DIRECT_DATABASE_URL=
+DATABASE_URL=
 
 # MAIN BRANCH - neondb
 # DATABASE_URL=
 
-# Prisma accelerate connection pool using dev branch
-DATABASE_URL=
