--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "6.1.0",
+    "@prisma/extension-accelerate": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.0",
     "class-variance-authority": "^0.7.1",
@@ -32,6 +34,7 @@
     "eslint-config-next": "15.1.2",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8.4.49",
+    "prisma": "^6.1.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2"
   }
