--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/extension-accelerate": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.0",
+    "@vercel/analytics": "^1.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
