--- a/package.json
+++ b/package.json
@@ -4,40 +4,42 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
-    "build": "npx prisma generate --no-engine && next build",
+    "build": "pnpm dlx prisma generate --no-engine && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "6.1.0",
+    "@auth/prisma-adapter": "^2.7.4",
+    "@prisma/client": "6.2.1",
     "@prisma/extension-accelerate": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.1",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.1",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
+    "next-auth": "5.0.0-beta.25",
     "nextjs-toploader": "^3.7.15",
-    "prettier-plugin-tailwindcss": "^0.6.9",
+    "prettier-plugin-tailwindcss": "^0.6.10",
     "react": "19.0.0",
-    "react-confetti": "^6.1.0",
+    "react-confetti": "^6.2.2",
     "react-dom": "19.0.0",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/node": "^22.10.2",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
-    "eslint": "^9.17.0",
+    "@types/node": "^22.10.7",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
+    "eslint": "^9.18.0",
     "eslint-config-next": "15.1.2",
     "eslint-config-prettier": "^9.1.0",
-    "postcss": "^8.4.49",
-    "prisma": "^6.1.0",
+    "postcss": "^8.5.1",
+    "prisma": "^6.2.1",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.3"
   }
 }
