--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/google": "^1.1.0",
     "@auth/prisma-adapter": "^2.7.4",
+    "@hello-pangea/dnd": "^17.0.0",
     "@prisma/client": "6.2.1",
     "@prisma/extension-accelerate": "^1.2.1",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
