--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@ai-sdk/google": "^1.1.0",
     "@auth/prisma-adapter": "^2.7.4",
+    "@aws-sdk/client-s3": "^3.732.0",
+    "@aws-sdk/s3-request-presigner": "^3.732.0",
     "@hello-pangea/dnd": "^17.0.0",
     "@prisma/client": "6.2.1",
     "@prisma/extension-accelerate": "^1.2.1",
@@ -18,11 +20,15 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.1",
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.34.3",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "ai": "^4.1.0",
+    "bullmq": "^5.34.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.0.3",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
     "next-auth": "5.0.0-beta.25",
