--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hello-pangea/dnd": "^17.0.0",
     "@prisma/client": "6.2.1",
     "@prisma/extension-accelerate": "^1.2.1",
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
@@ -28,6 +29,7 @@
     "bullmq": "^5.37.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
@@ -37,6 +39,7 @@
     "react": "19.0.0",
     "react-confetti": "^6.2.2",
     "react-dom": "19.0.0",
+    "standardwebhooks": "^1.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
