--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@aws-sdk/client-s3": "^3.735.0",
     "@aws-sdk/s3-request-presigner": "^3.735.0",
     "@hello-pangea/dnd": "^17.0.0",
-    "@prisma/client": "6.2.1",
+    "@prisma/client": "6.3.0",
     "@prisma/extension-accelerate": "^1.2.1",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
@@ -36,6 +36,7 @@
     "next": "15.1.2",
     "next-auth": "5.0.0-beta.25",
     "nextjs-toploader": "^3.7.15",
+    "posthog-js": "^1.212.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "19.0.0",
     "react-confetti": "^6.2.2",
