--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/google": "^1.1.4",
+    "@ai-sdk/google": "^1.1.10",
     "@auth/prisma-adapter": "^2.7.4",
-    "@aws-sdk/client-s3": "^3.735.0",
-    "@aws-sdk/s3-request-presigner": "^3.735.0",
+    "@aws-sdk/client-s3": "^3.741.0",
+    "@aws-sdk/s3-request-presigner": "^3.741.0",
     "@hello-pangea/dnd": "^17.0.0",
     "@prisma/client": "6.3.0",
     "@prisma/extension-accelerate": "^1.2.1",
@@ -21,23 +21,23 @@
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.1",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@upstash/ratelimit": "^2.0.5",
-    "@upstash/redis": "^1.34.3",
+    "@upstash/redis": "^1.34.4",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
-    "ai": "^4.1.8",
-    "bullmq": "^5.37.0",
+    "ai": "^4.1.21",
+    "bullmq": "^5.40.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dodopayments": "^0.20.1",
-    "framer-motion": "^12.0.6",
+    "framer-motion": "^12.3.1",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
     "next-auth": "5.0.0-beta.25",
     "nextjs-toploader": "^3.7.15",
-    "posthog-js": "^1.212.0",
+    "posthog-js": "^1.215.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "19.0.0",
     "react-confetti": "^6.2.2",
@@ -49,14 +49,14 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/node": "^22.10.10",
+    "@types/node": "^22.13.1",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "eslint": "^9.19.0",
     "eslint-config-next": "15.1.2",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8.5.1",
-    "prisma": "^6.2.1",
+    "prisma": "6.3.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
   }
