--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "next-auth": "5.0.0-beta.25",
     "nextjs-toploader": "^3.7.15",
     "posthog-js": "^1.216.1",
-    "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "19.0.0",
     "react-confetti": "^6.2.2",
     "react-dom": "19.0.0",
@@ -56,6 +55,8 @@
     "eslint-config-next": "15.1.2",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8.5.2",
+    "prettier": "^3.5.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "6.3.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3"
