--- a/example.env
+++ b/example.env
@@ -1,8 +1,43 @@
+# Authjs
 AUTH_SECRET=
+AUTH_GOOGLE_ID=
+AUTH_GOOGLE_SECRET=
+AUTH_TRUST_HOST=true
 
-# dev branch - neondb
+# Email
+AUTH_RESEND_KEY=
+
+# MAIN BRANCH POOLED - neondb
+DIRECT_DATABASE_URL=
+
+# PRISMA POOLED ACCELERATE
 DATABASE_URL=
 
-# MAIN BRANCH - neondb
-# DATABASE_URL=
+# GOOGLE GEMINI API KEY
+GOOGLE_API_KEY=
 
+# UPSTASH QUEUE REDIS
+REDIS_HOST=
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
+# RATE LIMIT
+UPSTASH_REDIS_REST_URL=
+UPSTASH_REDIS_REST_TOKEN=
+
+# CLOUDFLARE R2 BUCKET
+CLOUDFLARE_ACCOUNT_ID=
+CLOUDFLARE_ACCESS_KEY_ID=
+CLOUDFLARE_SECRET_ACCESS_KEY=
+CLOUDFLARE_TOKEN_VALUE=
+BUCKET_NAME="test"
+
+# Dodopayments
+DODO_PAYMENTS_API_KEY=
+WEBHOOK_SECRET=
+STATIC_PAYMENT_LINK=https://test.checkout.dodopayments.com/buy/productId?quantity=1&redirect_url=https://usepdx.tech/settings&email=userEmail&disableEmail=true
+
+ADMIN_KEY=
+
+NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
+NEXT_PUBLIC_POSTHOG_KEY=
