--- a/example.env
+++ b/example.env
@@ -1,20 +1,17 @@
 # Authjs
-AUTH_SECRET=
-AUTH_GOOGLE_ID=
-AUTH_GOOGLE_SECRET=
+AUTH_SECRET=required
+AUTH_GOOGLE_ID=required
+AUTH_GOOGLE_SECRET=required
 AUTH_TRUST_HOST=true
 
 # Email
 AUTH_RESEND_KEY=
 
-# MAIN BRANCH POOLED - neondb
-DIRECT_DATABASE_URL=
-
-# PRISMA POOLED ACCELERATE
+# MAIN BRANCH - neondb
 DATABASE_URL=
 
 # GOOGLE GEMINI API KEY
-GOOGLE_API_KEY=
+GOOGLE_API_KEY=required
 
 # UPSTASH QUEUE REDIS
 REDIS_HOST=
