--- a/example.env
+++ b/example.env
@@ -8,7 +8,7 @@ AUTH_TRUST_HOST=true
 AUTH_RESEND_KEY=
 
 # MAIN BRANCH - neondb
-DATABASE_URL=
+DATABASE_URL=postgres://user:password@db/mydb
 
 # GOOGLE GEMINI API KEY
 GOOGLE_API_KEY=required
