--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@auth/prisma-adapter": "^2.8.0",
     "@aws-sdk/client-s3": "^3.758.0",
     "@aws-sdk/s3-request-presigner": "^3.758.0",
+    "@google/generative-ai": "^0.24.0",
     "@hello-pangea/dnd": "^17.0.0",
     "@prisma/client": "6.4.1",
     "@radix-ui/react-accordion": "^1.2.3",
