remove upstash dependency

--- a/example.env
+++ b/example.env
@@ -13,14 +13,10 @@ DATABASE_URL=postgres://user:password@localhost/mydb
 # GOOGLE GEMINI API KEY
 GOOGLE_API_KEY=required
 
-# UPSTASH QUEUE REDIS
+# QUEUE REDIS
 REDIS_HOST=
 REDIS_PORT=6379
 REDIS_PASSWORD=
-
-# RATE LIMIT
-UPSTASH_REDIS_REST_URL=
-UPSTASH_REDIS_REST_TOKEN=
 
 # CLOUDFLARE R2 BUCKET
 CLOUDFLARE_ACCOUNT_ID=
